Package name fixes &Unit tests for fields

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ repositories {
     jcenter()
 }
 
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
