--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
